--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -10,6 +10,10 @@
     <p>{{class_string}}</p>
   </div>
 
+  <div class="meta area">
+    <p>{{subject_string}}</p>
+  </div>
+
   <div class="meta rec">
     {{chapter_count}}
   </div>
