--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -5,7 +5,7 @@
 
 	<!-- BEGIN ONE LEVEL MENU -->
 	<li class="start active">
-		<a href="javascript:;">
+		<a href="javascript://;">
 			<i class="fa fa-book"></i>
 			<span class="title">Content Management</span>
 			<span class="arrow"></span>
