--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -4,11 +4,11 @@
 <ul>	
 
 	<!-- BEGIN ONE LEVEL MENU -->
-	<li class="start active">
+	<li class="start active open">
 		<a href="javascript://;">
 			<i class="fa fa-book"></i>
 			<span class="title">Content Management</span>
-			<span class="arrow"></span>
+			<span class="arrow open"></span>
 		</a>
 		<ul class="sub-menu">
 		</ul>
