--- a/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/left-nav/templates/leftnav.html
@@ -4,7 +4,7 @@
 <ul>	
 
 	<!-- BEGIN ONE LEVEL MENU -->
-	<li class="start">
+	<li class="start open active">
 		<a href="javascript://;">
 			<i class="fa fa-book"></i>
 			<span class="title">Content Management</span>
