--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -102,6 +102,12 @@
 .docket{
 	.tile-footer.drag{
 		cursor: move;
+		.semi-bold{
+			font-weight: 700;
+		}
+		i{
+			font-size: 10px;
+		}
 	}
 	ul{
 		padding:0;
