--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -168,3 +168,12 @@ tbody.rowlink{
 		margin-top: 20px !important; /*For mobile app testing*/
 	}
 }
+
+#myCanvas-miki{
+	.cbp_tmlabel{
+		cursor: pointer;
+		a{
+			color: @color-primary;
+		}
+	}
+}
