--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -23,6 +23,33 @@
 .creator {
   position: relative;
 }
+.creator .row {
+  position: relative;
+}
+.creator .row .column {
+  background: transparent;
+  height: 100%;
+  position: relative;
+  background-clip: content-box;
+  background: #fff;
+}
+.creator .row .column.empty-column {
+  background: url(../../../images/empty-drag-bg.svg) no-repeat center center #ffffff;
+  background-clip: content-box;
+  background-size: contain;
+  min-height: 100px !important;
+  padding: 0.5em;
+}
+.creator .row .column .container {
+  padding: 0;
+}
+.creator .row .column .row {
+  margin: 0.5em;
+  border: 1px solid transparent;
+}
+.creator .row:last-child {
+  margin: 0;
+}
 #site-page-content-region {
   margin-left: 260px;
   margin-right: 260px;
@@ -459,33 +486,6 @@
   transition: all 0.3s ease-out;
   /* Chrome 26, Firefox 16+, IE 10+, Opera 12.10+ */
 
-}
-.row {
-  position: relative;
-}
-.row .column {
-  background: transparent;
-  height: 100%;
-  position: relative;
-  background-clip: content-box;
-  background: #fff;
-}
-.row .column.empty-column {
-  background: url(../../../images/empty-drag-bg.svg) no-repeat center center #ffffff;
-  background-clip: content-box;
-  background-size: contain;
-  min-height: 100px !important;
-  padding: 0.5em;
-}
-.row .column .container {
-  padding: 0;
-}
-.row .column .row {
-  margin: 0.5em;
-  border: 1px solid transparent;
-}
-.row:last-child {
-  margin: 0;
 }
 #settings-region {
   position: absolute !important;
