textbook thumbnail & cover image

--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/list/templates/list_item.html
@@ -1,5 +1,5 @@
   <div class="meta name">
-    <div class="img_wrapper"> <img alt="" src="{{cover_pic}}"> </div>
+    <div class="img_wrapper"> {{&thumbnail}}</div>
     <div class="titles">
       <h2><a class="textbook_titles" data-id="{{term_id}}" href="#textbook/{{term_id}}">{{name}}</a></h2>
       <p><em>{{author}}</em></p>
