--- a/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/textbooks/textbook-single/templates/textbook-description.html
@@ -5,7 +5,7 @@
 <!-- END PAGE TITLE -->
 <div class="tiles cover-pic-wrapper">						
 	<div class="overlayer bottom-right"></div>
-<img src="{{cover_pic}}" alt="">
+{{&cover_pic}}
 </div>
 <div class="tiles white">
 
