--- a/HTML/assets/less/mixins.less
+++ b/HTML/assets/less/mixins.less
@@ -545,3 +545,7 @@
       -ms-transition: opacity .5s ease-in-out;
        -o-transition: opacity .5s ease-in-out;
 }
+
+.right{
+  float: right;
+}
