--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -456,4 +456,29 @@
 	}
 }
 
+.wide-modal{
+	.modal-dialog{
+		width: 75%;
+	}
+}
+
+.modal-content{
+	.modal-header{
+		background-color: @color-info;
+		.modal-title{
+			color: #fff;
+			text-align: left;
+			font-weight: 600;
+		}
+		.close{
+			color: #fff;
+		}
+	}
+	.modal-body{
+		.media-manager-select{
+			background-color: @color-info;
+		}
+	}
+}
+
 
