single content piece html

--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -3,6 +3,7 @@
 @import "builder.less";
 @import "chapters.less";
 @import "class.less";
+@import "training.less";
 
 body{
 	background-color: @body-bg;
