--- a/HTML/assets/css/custom.css
+++ b/HTML/assets/css/custom.css
@@ -20,8 +20,24 @@
   -ms-transition: opacity 0.5s ease-in-out;
   -o-transition: opacity 0.5s ease-in-out;
 }
-.right {
-  float: right;
+.overlap-left-15 {
+  position: absolute;
+  left: -15px;
+  bottom: 40%;
+}
+.overlap-left-15 i {
+  color: #fff;
+}
+.overlap-right-15 {
+  position: absolute;
+  right: -15px;
+  bottom: 40%;
+}
+.overlap-right-15 i {
+  color: #fff;
+}
+.m-r-0 {
+  margin-right: 0;
 }
 .creator {
   position: relative;
@@ -188,6 +204,12 @@
 .textarea {
   width: 100%;
 }
+.font {
+  width: 68%;
+}
+.textFormat {
+  display: inline-block;
+}
 .textFormat .btn,
 .textFormat .btn:focus {
   background-color: #d1dade;
@@ -199,6 +221,18 @@
 .textFormat .btn[disabled] {
   background-color: #0aa699;
   color: #fff;
+}
+.minicolors-theme-default.minicolors {
+  width: 60px;
+  height: 25px;
+  margin-right: 20px;
+}
+.minicolors-swatch-color {
+  border-radius: 5px;
+}
+.rotateCtrl > div {
+  position: relative;
+  top: 15px;
 }
 .element-wrapper {
   border: 2px solid #f3f3f3;
@@ -535,6 +569,33 @@
   padding: 4px 12px;
   margin-right: 3px;
 }
+.wide-modal .modal-dialog {
+  width: 80%;
+}
+.modal-content .modal-header {
+  background-color: #0090d9;
+}
+.modal-content .modal-header .modal-title {
+  color: #fff;
+  text-align: left;
+  font-weight: 600;
+}
+.modal-content .modal-header .close {
+  color: #fff;
+  opacity: 1;
+}
+.modal-content .modal-body .media-manager-select {
+  background-color: #0090d9;
+}
+.modal-content .modal-body #edit-media-region {
+  padding-bottom: 20px;
+}
+.modal-content .modal-body button {
+  float: right;
+}
+.modal-content .modal-footer {
+  display: none;
+}
 .listBox {
   margin-top: 60px;
 }
@@ -545,6 +606,11 @@
 }
 .user-description-box {
   min-height: 120px;
+}
+.teacherCanvas {
+  background-color: #fff;
+  position: relative;
+  min-height: 200px;
 }
 body {
   background-color: #e5e9ec;
