--- a/HTML/assets/less/mixins.less
+++ b/HTML/assets/less/mixins.less
@@ -545,3 +545,25 @@
       -ms-transition: opacity .5s ease-in-out;
        -o-transition: opacity .5s ease-in-out;
 }
+
+.overlap-left-15{
+  position: absolute;
+  left: -15px;
+  bottom: 40%;
+  i{
+    color: #fff;
+  }
+}
+
+.overlap-right-15{
+  position: absolute;
+  right: -15px;
+  bottom: 40%;
+  i{
+    color: #fff;
+  }
+}
+
+.m-r-0{
+  margin-right: 0;
+}
