--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-collection/collection-details/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-collection/collection-details/templates/collection-details.html
@@ -6,7 +6,7 @@
 </div>
 <div class="grid-body no-border" style="overflow: hidden; display: block;">
 	<form name="content-collection-form" id="content-collection-form">
-		Module Name: <input name="title" type="text" value="" />
+		Module Name: <input name="name" type="text" value="" />
 		<div class="row ">
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
@@ -23,7 +23,7 @@
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Textbook</label>
-					<select name="terms[]" id="textbooks" class="form-control select2" >
+					<select name="term_ids[]" id="textbooks" class="form-control select2" >
 						<option value="">--select textbook--</option>
 		                {{#items}}
 		                	<option value="{{term_id}}">{{name}}</option>
@@ -48,7 +48,7 @@
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Chapter <span class="muted small pull-right"> Select a Textbook first</span></label>
-					<select name="terms[]" id="chapters" class="form-control select2" >
+					<select name="term_ids[]" id="chapters" class="form-control select2" >
 						<option value="">--select chapters--</option>
 		            </select>
 				</div>
@@ -58,14 +58,14 @@
 				<div class="col-md-4">
 				   <div class="margin-bottom-20 ">
 					<label class="form-label">Section <span class="muted small pull-right"> Select a Chapter first</span></label>
-					<select name="terms[]" id="secs" class="form-control select2" multiple="">
+					<select name="term_ids[]" id="secs" class="form-control select2" multiple="">
 		            </select>
 				</div>
 			</div>
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Sub-Sections <span class="muted small pull-right"> Select a Chapter first</span></label>
-					<select name="terms[]" id="subsecs" class="form-control select2" multiple="">
+					<select name="term_ids[]" id="subsecs" class="form-control select2" multiple="">
 		            </select>
 				</div>
 			</div>
