--- a/HTML/assets/less/training.less
+++ b/HTML/assets/less/training.less
@@ -5,3 +5,15 @@
 
 }
 
+.studntBtn{
+	position: absolute;
+	right: 0;
+	top: 8%;
+}
+
+.infoBar{
+	width: 100%;
+	background-color: @preview-grey;
+	//height: 80px;
+	//padding: 10px 10px 0;
+}
