--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-collection/collection-details/templates/collection-details.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-collection/collection-details/templates/collection-details.html
@@ -6,23 +6,23 @@
 </div>
 <div class="grid-body no-border" style="overflow: hidden; display: block;">
 	<form name="content-collection-form" id="content-collection-form">
-		Module Name: <input name="name" type="text" value="" />
+		Module Name: <input id="group_name" name="name" type="text" required="required" value="" />
 		<div class="row ">
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Objective</label>
-					<textarea name="description[objective]" class="form-control" placeholder="Enter Objective"></textarea>
+					<textarea id="objective" name="description[objective]" required="required" class="form-control" placeholder="Enter Objective"></textarea>
 					</div>
 			</div>
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Physical Requirements</label>
-					<textarea name="description[physical_requirements]" class="form-control" placeholder="Enter Physical Requirements"></textarea>
+					<textarea name="description[physical_requirements]"  required="required" class="form-control" placeholder="Enter Physical Requirements"></textarea>
 				</div>
 			</div>
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
-					<label class="form-label">Textbook</label>
+					<label required="required" class="form-label">Textbook</label>
 					<select name="term_ids[]" id="textbooks" class="form-control select2" >
 						<option value="">--select textbook--</option>
 		                {{#items}}
@@ -36,13 +36,13 @@
 				<div class="col-md-4">
 				   <div class="margin-bottom-20 ">
 					<label class="form-label">Description</label>
-					<textarea name="description[description]" rows="4" class="form-control" placeholder="Enter Description"></textarea>
+					<textarea id="description" name="description[description]" rows="4" class="form-control" placeholder="Enter Description"></textarea>
 				</div>
 			</div>
 			<div class="col-md-4">
 			    <div class="margin-bottom-20 ">
 					<label class="form-label">Electronic Requirements</label>
-					<textarea name="description[electionic_requirements]" class="form-control" placeholder="Enter Electronic Requirements"></textarea>
+					<textarea id="electronic_requirements" name="description[electionic_requirements]" class="form-control" placeholder="Enter Electronic Requirements"></textarea>
 				</div>
 			</div>
 			<div class="col-md-4">
