--- a/wp-content/themes/walnut/walnut/dev/css/custom.css
+++ b/wp-content/themes/walnut/walnut/dev/css/custom.css
@@ -815,3 +815,7 @@ tbody.rowlink td {
   width: 24%;
   margin-right: 5px;
 }
+textarea.error,
+.select2-choice.error {
+  border: 1px solid #f35958 !important;
+}
