--- a/wp-content/themes/walnut/walnut/dev/js/apps/content-collection/content-selection/templates/content-selection.html
+++ b/wp-content/themes/walnut/walnut/dev/js/apps/content-collection/content-selection/templates/content-selection.html
@@ -5,7 +5,31 @@
 	</div>
 </div>
 <div class="grid-body no-border contentSelect" style="overflow: hidden; display: block;">
-	<div class="row"><div class="col-xs-11"><div class="filters"><div class="table-tools-actions"><select><option value="one">Textbook</option><option value="two">Two</option><option value="three">Three</option><option value="four">Four</option></select><select><option value="one">Chapter</option><option value="two">Two</option><option value="three">Three</option><option value="four">Four</option></select><select><option value="one">Section</option><option value="two">Two</option><option value="three">Three</option><option value="four">Four</option></select><select><option value="one">Sub-Section</option><option value="two">Two</option><option value="three">Three</option><option value="four">Four</option></select></div></div></div><div class="col-xs-1"></div><div class="clearfix"></div><div class="col-sm-12"></div></div>
+	<div class="row">
+		<div class="col-xs-11">
+			<div class="filters">
+				<div class="table-tools-actions">
+					<!--{{#tableData.filters}}
+						<select>
+							{{#values}}
+								<option value="one">{{.}}</option>
+							{{/values}}
+						</select>
+					{{/tableData.filters}}-->
+					
+						<select id="textbooks-filter">
+							{{#textbooksFilter}}
+								<option value="{{id}}">{{name}}</option>
+							{{/textbooksFilter}}
+						</select>
+
+				</div>
+			</div>
+		</div>
+		<div class="col-xs-1"></div>
+		<div class="clearfix"></div>
+		<div class="col-sm-12"></div>
+	</div>
 	<div class="row">
 		<div class="col-lg-12">
 			<h4><span class="semi-bold">All</span> Questions</h4>
