contetn piece single, app login

--- a/HTML/assets/less/mixins.less
+++ b/HTML/assets/less/mixins.less
@@ -551,7 +551,7 @@
   left: -15px;
   bottom: 40%;
   i{
-    color: #fff;
+    color: @color-white;
   }
 }
 
@@ -560,10 +560,26 @@
   right: -15px;
   bottom: 40%;
   i{
-    color: #fff;
+    color: @color-white;
   }
 }
 
 .m-r-0{
   margin-right: 0;
+}
+
+.m-l-0{
+  margin-left: 0;
+}
+
+.m-b-0{
+  margin-bottom: 0;
+}
+
+.m-t-0{
+  margin-top: 0;
+}
+
+.p-t-60{
+  padding-top: 60px;
 }
