--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -10,9 +10,9 @@
 			height: 100%;
 			position: relative;
 			background-clip: content-box;
-			background: #fff;
+			background: @color-white;
 			&.empty-column {
-				background: url(../../../images/empty-drag-bg.svg) no-repeat center center #fff;
+				background: url(../../../images/empty-drag-bg.svg) no-repeat center center @color-white;
 				background-clip: content-box;
 				background-size: contain;
 				min-height:100px !important;
@@ -41,7 +41,7 @@
 
 #myCanvas{
 	//border: 1px solid #505458;
-	background: #fff;
+	background: @color-white;
 	//position: absolute;
 	left: 260px;
 	top: 0;
@@ -59,7 +59,7 @@
 
 #toolbox{
 	width: 240px;
-	background: #fff;
+	background: @color-white;
 	position: absolute;
 	z-index: 2;
 	//padding: 15px 10px;
@@ -70,7 +70,7 @@
 			li{
 				float: left;
 				border: 2px solid @body-bg;
-				background: #fff;
+				background: @color-white;
 				width: 65px;
 				height: 65px;
 				margin: 4px;
@@ -85,7 +85,7 @@
 					transition: all 0.2s linear;
 					
 					a{
-						color: #fff;
+						color: @color-white;
 						cursor: move;
 					}
 				}
@@ -167,7 +167,7 @@
 }
 
 .docket-body{
-	background: #fff;
+	background: @color-white;
 	padding: 15px 10px;
 	color: #000;
 	label{
@@ -199,7 +199,7 @@
 	}
 	.btn:hover, .btn:active, .btn.active, .btn.disabled, .btn[disabled]{
 		background-color: @color-primary;
-		color: #fff;
+		color: @color-white;
 	}
 
 }
@@ -248,13 +248,13 @@
 				color: @color-blue;
 				font-size: 20px;
 				line-height: 20px;
-				background: #fff;
+				background: @color-white;
 				border: 2px solid @color-blue;
 				//border-radius: 3px;
 				.ease;
 				&:hover {
 					background: @color-blue;
-					color: #fff;
+					color: @color-white;
 				.ease;
 				}
 			}
@@ -263,7 +263,7 @@
 			right: -10px;
 			width: 20px;
 			height: 20px;
-			background: #fff;
+			background: @color-white;
 			text-align: center;
 			cursor: pointer;
 			span {
@@ -277,7 +277,7 @@
 				background: @color-blue;
 				.ease;
 				span{
-					color: #fff;
+					color: @color-white;
 				}
 			}
 		}
@@ -285,7 +285,7 @@
 			right: 20px;
 			width: 20px;
 			height: 20px;
-			background: #fff;
+			background: @color-white;
 			text-align: center;
 			cursor: pointer;
 			span {
@@ -299,7 +299,7 @@
 				background: @color-blue;
 				.ease;
 				span{
-					color: #fff;
+					color: @color-white;
 				}
 			}
 		}
@@ -354,7 +354,7 @@
 				margin: 0 0.05em;
 				a {
 					padding: 0.3em 0.5em;
-					color: #fff;
+					color: @color-white;
 					border-radius: 3px;
 					font-weight: 700;
 				}
@@ -402,7 +402,7 @@
 		line-height: 6px;
 		width: 40px;
 		height: 20px;
-		background: #fff;
+		background: @color-white;
 		border: 2px solid lighten(@dash-grey, 20%);
 		//border-radius: 3px;
 		position: absolute;
@@ -415,7 +415,7 @@
 		.ease;
 		&:hover, &:active {
 			background: @color-blue;
-			color: #fff;
+			color: @color-white;
 			border-color: @color-blue;
 			.ease;
 		}
@@ -432,7 +432,7 @@
 
 .settings-box {
 	width: 400px;
-	background: #fff;
+	background: @color-white;
 	box-shadow: 0 0 3px 1px #aaaaaa;
 	padding: 0 0.5em 0.5em;
 	border-radius: 3px;
@@ -448,13 +448,13 @@
 			margin: 0 -15px;
 		}
 		h5.title{
-			color: #fff;
+			color: @color-white;
 			font-weight: bold;
 		}
 		.close-btn{
 			text-align: right;
 			a{
-				color: #fff;
+				color: @color-white;
 				font-weight: bold;
 				font-size: 18px;
 			}
@@ -471,7 +471,7 @@
 		.btn-default{
 			padding: 4px 12px;
 			margin-right: 3px;
-			//color: #fff;
+			//color: @color-white;
 		}
 	}
 }
@@ -486,12 +486,12 @@
 	.modal-header{
 		background-color: @color-info;
 		.modal-title{
-			color: #fff;
+			color: @color-white;
 			text-align: left;
 			font-weight: 600;
 		}
 		.close{
-			color: #fff;
+			color: @color-white;
 			opacity: 1;
 		}
 	}
