--- a/HTML/assets/less/custom.less
+++ b/HTML/assets/less/custom.less
@@ -4,6 +4,7 @@
 @import "chapters.less";
 @import "class.less";
 @import "training.less";
+@import "teacher.less";
 
 body{
 	background-color: @body-bg;
