upload media styling for content creator

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -59,7 +59,7 @@
 
 #toolbox{
 	width: 220px;
-	background: @color-white;
+	background: @preview-grey;
 	position: absolute;
 	z-index: 2;
 	//padding: 15px 10px;
@@ -225,7 +225,7 @@
 
 .element-wrapper {
 	border: 2px solid @preview-grey;
-	padding: 6px;
+	padding: 7px;
 	margin: 4px 0 11px;
 	.ease;
 	//border-radius: 4px;
@@ -554,3 +554,24 @@
 	}
 }
 
+.aj-imp-upload-media{
+	text-align: center;
+
+	.aj-imp-upload-message{
+		cursor: pointer;
+		background: #e4e4e4;
+		border-radius: 5px;
+		padding: 10px;
+		width: 40%;
+		margin: 10px auto;
+		font-weight: bold;
+		.glyphicon{
+			width: 25px;
+		}
+	}
+
+	.bicon{
+		font-size: 50px;
+		color: @body-bg;
+	}
+}
