teacher take class screen1, mcq styles

--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -100,7 +100,7 @@
 	.qstns{
 		ul{
 			li{
-				width: 102px;
+				width: 96px;
 				height: 40px;
 				font-weight: bold;
 				i{
@@ -122,6 +122,7 @@
 	.builder_actions{
 		background: @body-bg;
 		padding-bottom: 15px;
+		margin-top: -48px;
 	}
 
 	.btn-cons2{
@@ -574,4 +575,11 @@
 		font-size: 50px;
 		color: @body-bg;
 	}
+}
+
+/*MCQ*/
+.mcq-option {
+	max-width: 200px;
+	margin-right: 10px;
+	float: left;
 }
