--- a/HTML/assets/less/builder.less
+++ b/HTML/assets/less/builder.less
@@ -582,4 +582,15 @@
 	max-width: 200px;
 	margin-right: 10px;
 	float: left;
+	word-wrap: break-word;
+	border: 2px dashed @preview-grey;
+	padding: 5px;
+	p{
+		margin: 0;
+	}
+	p.placeholder{
+		color: darken(@body-bg, 2%);
+		font-size: 15px;
+		font-weight: bold;
+	}
 }
